<resources>
    <string name="app_name">All Unit Converter</string>
    <string name="distance">Distance</string>
    <string name="area">Area</string>
    <string name="vol">Volume</string>
    <string name="weight">Weight</string>
    <string name="time">Time</string>
    <string name="temp">Temperature</string>
    <string name="power">Power</string>
    <string name="speed">Speed</string>
    <string name="energy">Energy</string>
    <string name="force">Force</string>
    <string name="pressure">Pressure</string>
    <string name="cooking">Cooking</string>
    <string name="fuel">Fuel</string>
    <string name="digitalstorage">Digital storage</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
